--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "main": "index.js",
     "license": "MIT",
     "scripts": {
-        "dev": "nodemon server.js",
-        "serve": "node server.js",
-        "start": "node server.js"
+        "dev": "nodemon Server.js",
+        "serve": "node Server.js",
+        "start": "node Server.js"
     },
     "dependencies": {
         "dotenv": "^16.0.1",
